--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,6 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
     destination: /home/ec2-user/server
@@ -16,14 +17,14 @@ hooks:
       timeout: 300
       runas: ec2-user
   AfterInstall:
-    - location: server_clear.sh
+    - location: fix_privileges.sh
       timeout: 300
       runas: ec2-user
   ApplicationStart:
     - location: server_start.sh
-      timeout: 300
+      timeout: 20
       runas: ec2-user
   ApplicationStop:
     - location: server_stop.sh
-      timeout: 300
+      timeout: 20
       runas: ec2-user
