--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,15 +6,14 @@ phases:
       java: corretto11
   build:
     commands:
-      - echo Build started on `date`
       - ./gradlew bootJar
   post_build:
     commands:
-      - echo Build completed on `date`
-      - mvn package
+      - echo Build completed
 artifacts:
   files:
     - build/libs/*.jar
     - scripts/*.sh
     - appspec.yml
+  #com/mycompany/app/HelloWorld.java, specifying yes will place this file in /HelloWorld.java
   discard-paths: yes
